# voice-agent

./: README.md  package-lock.json
backend/: .gitignore  add_column.py  add_doctor_login.py  add_email_column.py  auth.py  backend.py  database.py  dbmigrate.py  delete_pending.py  main.py  migrate.py  models.py  nixpacks.toml  pyproject.toml  railway.toml  requirements.txt
backend/routers/: analytics.py  appointments.py  calender.py  call_logs.py  doctor_auth.py  doctors.py  hospitals.py  medical.py  noshow.py  notifications.py  patients.py  payments.py  recall.py  revenue.py  vapi.py
backend/services/: email.py  scheduler.py  sms.py  whatsapp.py
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css
frontend/src/api/: axios.js
frontend/src/components/: ConfirmModal.jsx  Layout.jsx
frontend/src/pages/: Analytics.jsx  Appointments.jsx  CallLogs.jsx  Dashboard.jsx  DoctorDashboard.jsx  DoctorLogin.jsx  Doctors.jsx  Login.jsx  Medical.jsx  NoShow.jsx  Patients.jsx  Payments.jsx  Recall.jsx  Revenue.jsx  Settings.jsx
frontend/src/store/: auth.js  dcotorAuth.js
