[project]
name = "voice-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "apscheduler>=3.11.2",
    "bcrypt>=5.0.0",
    "email-validator>=2.3.0",
    "fastapi>=0.136.1",
    "fastapi-mail>=1.6.3",
    "google-api-python-client>=2.195.0",
    "google-auth>=2.50.0",
    "google-auth-httplib2>=0.3.1",
    "google-auth-oauthlib>=1.3.1",
    "httpx>=0.28.1",
    "passlib>=1.7.4",
    "psycopg2-binary>=2.9.12",
    "python-dotenv>=1.2.2",
    "pytz>=2026.2",
    "sqlalchemy>=2.0.49",
    "stripe>=15.1.0",
    "twilio>=9.10.5",
    "uvicorn>=0.46.0",
]
